scss, sass 문법 배움

--- a/Portfolio2Answer/portfolio2.html
+++ b/Portfolio2Answer/portfolio2.html
@@ -9,6 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link href="./Portfolio2.css" rel="stylesheet">
+    <link rel="stylesheet" href="../fontawesome/css/all.min.css" />
 
   <title>Hello, world!</title>
 
@@ -101,6 +102,7 @@
       </div>
       <div class="col-md-3" style="padding: 5px;">
         <div class="white-box" style="text-align: center;">
+          
           <p>Find me at Linkedout.com</p>
           <button class="btn btn-primary m-auto px-4" style="background:  #6fbaf8; border: none; display: block;">Sign Up</button>
           <p style="color: #6fbaf8;" class="mt-2">Already a  member?</p>
